wise-k8s-dir/wise-dir-v3-221216/wise-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wise-ingress
  #namespace: hyperdata
  annotations:
    #nginx.ingress.kubernetes.io/default-backend: wiseolap-svc
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/app-root: /
    #nginx.ingress.kubernetes.io/rewrite-target: /editds/$1$2
    #nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-name: authorization
    nginx.ingress.kubernetes.io/rewrite-target: /editds/$1
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
    nginx.ingress.kubernetes.io/session-cookie-path: /editds
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/session-cookie-expires: "1800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "1800"
spec:
  ingressClassName: hyperdata-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiseolap-svc-v2
            port:
              number: 7777
      - path: /editds/(.*) # 둘다 됨.
      #- path: /editds(/|$)(.*) # 둘다  됨.
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: wiseolap-svc-v2
            port:
              number: 8888
      - path: /editds/report/config.do
        pathType: Prefix
        backend:
          service:
            name: wiseolap-svc-v2
            port:
              number: 8888
      - path: /editds/login.do(.*)
        pathType: Prefix
        backend:
          service:
            name: wiseolap-svc-v2
            port:
              number: 7777
